# trivial-C2

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  vcpkg.json  your_program.sh
agent-x64-linux/: .gitignore  CMakeLists.txt  build-and-run.sh  just-build.sh
agent-x64-linux/src/: config.h  main.c  task-handlers.c  task-handlers.h
certs/: generate-cert.sh  server-cert.pem
control/: CMakeLists.txt  build-and-run.sh  vcpkg.json
control/src/: main.c
http-server/: hash-table.c  hash-table.h  main.c  parser.c  parser.h
server/: CMakeLists.txt  build-and-run.sh  test-server.sh  testdatabase.db  vcpkg.json
server/src/: handlers.c  handlers.h  http-parser.c  http-parser.h  http-server.c  http-server.h  init-database.c  init-database.h  main.c
